All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>List of Actions</description>
    <inlineHelpText>List of Actions</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Increase</fullName>
                <default>true</default>
                <label>Increase</label>
            </value>
            <value>
                <fullName>Decrease</fullName>
            </value>
            <value>
                <fullName>Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>