All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the usage/consumption is billable to the customer or not.</description>
    <inlineHelpText>Flag to indicate if the usage/consumption is billable to the customer or not.</inlineHelpText>
    <label>Billable?</label>
    <type>Checkbox</type>
</CustomField>