All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Chk_Child_Products__c.field-meta.xml
<CustomField>
    <fullName>Chk_Child_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if Child Installed Product are to be considered</description>
    <inlineHelpText>Flag indicates if Child Installed Product are to be considered</inlineHelpText>
    <label>Child Products</label>
    <type>Checkbox</type>
</CustomField>