All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Chk_Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Chk_Parent_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if Parent Installed Product is to be considered</description>
    <inlineHelpText>Flag indicates if Parent Installed Product is to be considered</inlineHelpText>
    <label>Parent Product</label>
    <type>Checkbox</type>
</CustomField>