All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Chk_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Chk_Product_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if Product Line is to be considered</description>
    <inlineHelpText>Flag indicates if Product Line is to be considered</inlineHelpText>
    <label>Product Line</label>
    <type>Checkbox</type>
</CustomField>