All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Close_Line__c.field-meta.xml
<CustomField>
    <fullName>Close_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the line can be closed.</description>
    <inlineHelpText>Flag to indicate if the line can be closed.</inlineHelpText>
    <label>Close Line</label>
    <type>Checkbox</type>
</CustomField>