All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Copy_Covered_Products__c.field-meta.xml
<CustomField>
    <fullName>Copy_Covered_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if Covered Products are to be copied</description>
    <inlineHelpText>Flag indicates if Covered Products are to be copied</inlineHelpText>
    <label>Copy Covered Products</label>
    <type>Checkbox</type>
</CustomField>