All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Copy_Entitled_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Copy_Entitled_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if Entitled Contacts are to be copied</description>
    <inlineHelpText>Flag indicates if Entitled Contacts are to be copied</inlineHelpText>
    <label>Copy Entitled Contacts</label>
    <type>Checkbox</type>
</CustomField>