All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Copy_Included_Services__c.field-meta.xml
<CustomField>
    <fullName>Copy_Included_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if Included Services are to be copied</description>
    <inlineHelpText>Flag indicates if Included Services are to be copied</inlineHelpText>
    <label>Copy Included Services</label>
    <type>Checkbox</type>
</CustomField>