All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Date_Required__c.field-meta.xml
<CustomField>
    <fullName>Date_Required__c</fullName>
    <description>Date for Booking Window Start Date Selection</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>