All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Destination_Location__c.field-meta.xml
<CustomField>
    <fullName>Destination_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Destination Location where this part is requested. Link to an existing site record in ServiceMax.</description>
    <inlineHelpText>Destination Location where this part is requested. Link to an existing site record in ServiceMax.</inlineHelpText>
    <label>Destination Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>ServiceMax List</relationshipLabel>
    <relationshipName>ServiceMax_List2</relationshipName>
    <type>Lookup</type>
</CustomField>