All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Internal use only</description>
    <inlineHelpText>End Time</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>