All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Expected_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Expected_Quantity__c</fullName>
    <description>Number of products expected.</description>
    <inlineHelpText>Number of products expected.</inlineHelpText>
    <label>Expected Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>