All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Expected_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Ship_Date__c</fullName>
    <description>Date for Booking Window End Date Selection</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>