All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>Internal use only</description>
    <inlineHelpText>Field API Name</inlineHelpText>
    <label>Field API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>