All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Line_Price__c.field-meta.xml
<CustomField>
    <fullName>Line_Price__c</fullName>
    <description>Price for Line Item.</description>
    <inlineHelpText>Price for Line Item.</inlineHelpText>
    <label>Line Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>