All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <description>Indicates the type of line: Parts, Labor or Expenses.</description>
    <inlineHelpText>Indicates the type of line: Parts, Labor or Expenses.</inlineHelpText>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>