All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Match_Contact__c.field-meta.xml
<CustomField>
    <fullName>Match_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if Contact is to be validated</description>
    <inlineHelpText>Flag indicates if Contact is to be validated</inlineHelpText>
    <label>Match Contact</label>
    <type>Checkbox</type>
</CustomField>