All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <description>Internal use only</description>
    <inlineHelpText>Object Id</inlineHelpText>
    <label>Object Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>