All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Quantity_Serviced__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Serviced__c</fullName>
    <description>Internal use only</description>
    <inlineHelpText>Quantity Serviced</inlineHelpText>
    <label>Qty Serviced</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>