All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Quantity_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Transferred__c</fullName>
    <description>Quantity transferred from source to destination location.</description>
    <inlineHelpText>Quantity transferred from source to destination location.</inlineHelpText>
    <label>Qty Transferred</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>