All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Received_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Received_Quantity__c</fullName>
    <description>Number of units of this product received so far.</description>
    <inlineHelpText>Number of units of this product received so far.</inlineHelpText>
    <label>Received Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>