All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Receiving_Location__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location where the product is being received. This is a lookup to an existing site record.</description>
    <inlineHelpText>Location where the product is being received. This is a lookup to an existing site record.</inlineHelpText>
    <label>Receiving Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>ServiceMax List (Receiving Location)</relationshipLabel>
    <relationshipName>ServiceMax_List3</relationshipName>
    <type>Lookup</type>
</CustomField>