All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Required_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Required_Quantity__c</fullName>
    <description>Number of units of this product required.</description>
    <inlineHelpText>Number of units of this product required.</inlineHelpText>
    <label>Required Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>