All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Select__c.field-meta.xml
<CustomField>
    <fullName>Select__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to bind checkbox in List of SVMX_List records on Visualforce page with controller.</description>
    <inlineHelpText>Field to bind checkbox in List of SVMX_List records on Visualforce page with controller.</inlineHelpText>
    <label>Select</label>
    <type>Checkbox</type>
</CustomField>