All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Internal use only</description>
    <inlineHelpText>Sequence</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>