All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Show_Expired_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Show_Expired_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if Expired Entitlements are to be considered</description>
    <inlineHelpText>Flag indicates if Expired Entitlements are to be considered</inlineHelpText>
    <label>Show Expired Entitlements</label>
    <type>Checkbox</type>
</CustomField>