All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Show_Future_Entitlements__c.field-meta.xml
<CustomField>
    <fullName>Show_Future_Entitlements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if Future Entitlements are to be considered</description>
    <inlineHelpText>Flag indicates if Future Entitlements are to be considered</inlineHelpText>
    <label>Show Future Entitlements</label>
    <type>Checkbox</type>
</CustomField>