All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Source_Location__c.field-meta.xml
<CustomField>
    <fullName>Source_Location__c</fullName>
    <description>Location from where the product  is being transfered. This is a lookup to an existing site record.</description>
    <inlineHelpText>Location from where the product  is being transfered. This is a lookup to an existing site record.</inlineHelpText>
    <label>Source Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>