All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Internal use only</description>
    <inlineHelpText>Start Time</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>