All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Stock_Status__c.field-meta.xml
<CustomField>
    <fullName>Stock_Status__c</fullName>
    <description>Internal use only</description>
    <inlineHelpText>Stock Status</inlineHelpText>
    <label>Stock Status</label>
    <length>150</length>
    <type>Text</type>
</CustomField>