All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Unit Price for Line Item.</description>
    <inlineHelpText>Unit Price for Line Item.</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>