All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/Used_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Used_Quantity__c</fullName>
    <description>Internal use only</description>
    <inlineHelpText>Used Quantity</inlineHelpText>
    <label>Used Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>