All_Component_DX/force-app/main/default/objects/ServiceMax_List__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User</description>
    <inlineHelpText>Lookup to User</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServiceMax_List</relationshipName>
    <type>Lookup</type>
</CustomField>